cilium/ciliumNetworkPolicy/L7-allow-api-admin.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-get-admin
  namespace: k8s-l7-test
spec:
  endpointSelector:
    matchLabels:
      app: api-admin

  ingress:
    - fromEndpoints:
        - matchLabels:
            app: client
    
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/xml"
              - method: "GET"
                path: "/json"
              - method: "GET"
                path: "/image/jpeg"
