cilium/ciliumNetworkPolicy/L7-allow-api-public.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-post-get-status
  namespace: k8s-l7-test
spec:
  endpointSelector:
    matchLabels:
      app: api-public
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: client
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

          rules:
            http:
              - method: "GET"
                path: "/get"
              - method: "GET"
                path: "/headers"
              - method: "GET"
                path: "/status/.*"
              - method: "GET"
                path: "/json"
