cilium/ciliumNetworkPolicy/allow-BE-DB.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: database-ingress
  namespace: cilium-test
spec:
  endpointSelector:
    matchLabels:
      app: database
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: backend
    
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
