cilium/ciliumNetworkPolicy/denyDefault.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: cilium-test
spec:
  endpointSelector: {}
  ingress: 
    - {}
