cilium/ciliumNetworkPolicy/denyEgressDefault.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-egress-deny
  namespace: cilium-test
spec:
  description: "Default policy to deny egress traffic"
  endpointSelector: {}
  egress:
    - {}
